--- a/src/PortfolioContainer/ContactMe/ContactMe.css
+++ b/src/PortfolioContainer/ContactMe/ContactMe.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;  
 } */
-.container{
+.contactContainer{
     width: 100%;
     height: 100%;
     /* background: #001660; */
