--- a/src/PortfolioContainer/AboutMe/AboutMe.css
+++ b/src/PortfolioContainer/AboutMe/AboutMe.css
@@ -63,7 +63,7 @@
 .about-Me-Profile-Picture-Background{
     height: 92%;
     width: 92%;
-    background-image: url('profile.jpg');
+    background-image: url('my-photo.jpg ');
     background-size: cover;
     border-radius: 50%;
     background-repeat: no-repeat;
